--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "backend",
-  "version": "0.0.0",
+  "version": "1.0.0",
+  "engines": {
+    "node": "16.x"
+  },
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
