--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "scripts": {
     "start": "node ./bin/www",
     "build": "yarn tsc",
+    "compile": "yarn tsc",
     "clean": "rm -rf dist && mkdir dist",
     "heroku-postbuild": "yarn clean && yarn compile"
   },
