--- a/package.json
+++ b/package.json
@@ -7,8 +7,9 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
+    "dev": "nodemon ./bin/www",
     "build": "yarn tsc",
-    "compile": "yarn tsc",
+    "compile": "yarn tsc -w",
     "clean": "rm -rf dist && mkdir dist",
     "heroku-postbuild": "yarn clean && yarn compile"
   },
